--- a/about.html
+++ b/about.html
@@ -52,18 +52,31 @@
     </section>
 
     <!-- Story -->
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Meet Kris McCoy</h2>
-      <p class="text-gray-300 leading-relaxed">
-        I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
-        I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
-        the WGU Business School. Today, I’m proud to be active in the East Texas business community!
-      </p>
-      <p class="text-gray-300 leading-relaxed mt-4">
-        I am pursuing professional certifications to further strengthen my ability to serve clients,
-        and I bring the same discipline, vigilance, and integrity from my military service into every project.
-      </p>
-    </section>
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8 flex flex-col md:flex-row items-center md:items-start gap-8">
+  <!-- Image -->
+  <div class="w-40 h-40 md:w-56 md:h-56 flex-shrink-0">
+    <img 
+      src="/assets/Dilloman.png" 
+      alt="Kris McCoy" 
+      class="rounded-full object-cover w-full h-full shadow-md"
+    >
+  </div>
+
+  <!-- Text -->
+  <div>
+    <h2 class="text-2xl font-semibold text-teal-300 mb-4">Meet Kris McCoy</h2>
+    <p class="text-gray-300 leading-relaxed">
+      I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
+      I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
+      the WGU Business School. Today, I’m proud to be active in the East Texas business community!
+    </p>
+    <p class="text-gray-300 leading-relaxed mt-4">
+      I am pursuing professional certifications to further strengthen my ability to serve clients,
+      and I bring the same discipline, vigilance, and integrity from my military service into every project.
+    </p>
+  </div>
+</section>
+
 
     <!-- Ethics Commitment -->
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
