--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
 
 
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 
   <style>
     body {
