--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -17,7 +17,7 @@
   <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <!-- Open Graph -->
   <meta property="og:title" content="Cybersecurity in Lindale & Tyler, Texas | Iron Dillo" />
   <meta property="og:description" content="Local cyber defense for Lindale and Tyler, Texas businesses. Protect your operations with Iron Dillo." />
