Update branding colors and fonts

--- a/Drafts/blog-post-1.html
+++ b/Drafts/blog-post-1.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="X-Frame-Options" content="DENY">
 <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
@@ -26,41 +27,28 @@
     }
     h1, h2 {
       color: #00ffc3;
-    }
     p {
       font-size: 1.1rem;
       line-height: 1.6;
-    }
     a {
-      color: #00ffc3;
       text-decoration: underline;
-    }
   </style>
 </head>
 
-<body>
-
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
   <h1>5 Ways to Stay Safer Online Right Now</h1>
-
   <p>You don’t need to be a tech wizard to stay safe online. Just a few simple habits can make you way harder to hack. Let’s hit five of them—fast, clean, and Iron Dillo–approved.</p>
-
   <h2>1. Stop Reusing Passwords</h2>
   <p>Use a password manager like Bitwarden or KeePass. Each site gets its own strong password—no repeats.</p>
-
   <h2>2. Turn On Two-Factor Authentication (2FA)</h2>
   <p>App-based codes like Authy or Google Authenticator are better than SMS. Use them anywhere you can.</p>
-
   <h2>3. Update Your Stuff</h2>
   <p>Browsers, phones, apps—if it runs software, patch it. Most hacks come from old junk.</p>
-
   <h2>4. Don’t Click Suspicious Links</h2>
   <p>Emails, texts, DMs—double check the sender, hover before you click, and never trust a link you didn’t ask for.</p>
-
   <h2>5. Avoid Running as Admin</h2>
   <p>Use daily accounts with limited privileges. If malware hits, it can’t hijack your whole system.</p>
-
   <hr>
   <p>Want help putting this into action? <a href="/services.html">Let's talk security</a>.</p>
-
 </body>
 </html>
