--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <!-- 🛡 Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -25,75 +26,62 @@
   <meta property="og:url" content="https://irondillo.com/lindale-tyler-cybersecurity.html" />
   <meta name="twitter:card" content="summary_large_image" />
   <script src="https://cdn.tailwindcss.com"></script>
+<script>
+ tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
+</script>
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Logo Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
-
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
-
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-center">
-      <h1 class="text-3xl font-bold text-teal-400 mb-4">Lindale & Tyler Cybersecurity</h1>
-      <p class="text-gray-300 leading-relaxed">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 text-center">
+      <h1 class="text-3xl font-bold text-oliveGreen mb-4">Lindale & Tyler Cybersecurity</h1>
+      <p class="text-armadilloGray leading-relaxed">
         Based in Lindale, Iron Dillo Cybersecurity proudly serves nearby Tyler and the surrounding East Texas region.
         I provide hands-on cyber defense, risk assessments, and security training tailored to local small businesses.
       </p>
     </section>
-
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Why Local Cyber Defense Matters</h2>
-      <p class="text-gray-300 leading-relaxed">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Why Local Cyber Defense Matters</h2>
         From ransomware to phishing, Lindale and Tyler businesses face the same
         dangers of any large metro area. Working with a nearby partner means quicker response times and a better
         understanding of your unique challenges.
-      </p>
-    </section>
-
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Services for East Texas</h2>
-      <p class="text-gray-300 leading-relaxed">
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Services for East Texas</h2>
         Whether you need a one-time security audit or ongoing support, I offer practical solutions:
-      </p>
-      <ul class="list-disc list-inside text-gray-300 mt-4 space-y-2">
+      <ul class="list-disc list-inside text-armadilloGray mt-4 space-y-2">
         <li>Security consultations and risk assessments</li>
         <li>Policy development and incident response planning</li>
         <li>Vulnerability scanning and remediation guidance</li>
         <li>Employee cybersecurity awareness training</li>
       </ul>
-    </section>
-
-    <section class="bg-gray-900 py-12 text-center">
+    <section class="bg-armadilloBlack py-12 text-center">
       <h2 class="text-2xl font-bold text-white mb-4">Protect Your Lindale or Tyler Business</h2>
-      <p class="text-gray-300 max-w-xl mx-auto">
+      <p class="text-armadilloGray max-w-xl mx-auto">
         Let's secure your operations so you can focus on growing your business. Get in touch for a free consultation
         and find out how Iron Dillo can defend your organization.
-      </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">Contact Me Today</a>
-    </section>
+      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">Contact Me Today</a>
   </main>
-
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
+  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
   </footer>
-
 </body>
 </html>
