--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -18,67 +19,59 @@
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <link rel="canonical" href="https://irondillo.com/privacy.html" />
   <script src="https://cdn.tailwindcss.com"></script>
+<script>
+ tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
+</script>
 </head>
 
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
-
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
   <!-- Logo Header -->
   <header class="text-center pt-8">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
-
   <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
-
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-4 sm:px-6 md:px-8 py-12">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h1 class="text-3xl font-extrabold text-teal-400 mb-4">Privacy Policy</h1>
-      <p class="text-gray-400 mb-4">Effective Date: June 12, 2025</p>
-
-      <p class="text-gray-300 leading-relaxed mb-4">
+    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
+      <h1 class="text-3xl font-extrabold text-oliveGreen mb-4">Privacy Policy</h1>
+      <p class="text-armadilloGray mb-4">Effective Date: June 12, 2025</p>
+      <p class="text-armadilloGray leading-relaxed mb-4">
         At Iron Dillo Cybersecurity, your privacy comes first. This site is built with privacy as a priority, and we collect the minimum information necessary to provide our services.
       </p>
-
-      <h2 class="text-xl font-bold text-teal-400 mb-2">Information We Do Not Collect</h2>
-      <ul class="list-disc list-inside space-y-2 text-gray-300 mb-4">
+      <h2 class="text-xl font-bold text-oliveGreen mb-2">Information We Do Not Collect</h2>
+      <ul class="list-disc list-inside space-y-2 text-armadilloGray mb-4">
         <li>No cookies</li>
         <li>No tracking scripts</li>
         <li>No third-party advertising</li>
         <li>No analytics tied to your personal identity</li>
       </ul>
-
-      <h2 class="text-xl font-bold text-teal-400 mb-2">Information You Choose to Share</h2>
-      <p class="text-gray-300 mb-4">If you use the contact form, your message is securely sent via Formspree.</p>
-      <p class="text-gray-300 mb-4">This may include your name, email, and the content of your message.</p>
-      <p class="text-gray-300 mb-4">This information is used only to respond to your inquiry and is not stored on Iron Dillo servers.</p>
-
-      <h2 class="text-xl font-bold text-teal-400 mb-2">How We Handle Your Information</h2>
-      <p class="text-gray-300 mb-4">We do not sell, share, or disclose your personal information to third parties.</p>
-      <p class="text-gray-300 mb-4">We implement basic security measures to ensure messages submitted through the contact form remain private.</p>
-
-      <h2 class="text-xl font-bold text-teal-400 mb-2">External Services</h2>
-      <p class="text-gray-300 mb-4">Google Search Console may collect anonymized, aggregated traffic data for site performance monitoring.</p>
-      <p class="text-gray-300 mb-4">This data cannot be used to identify individual visitors.</p>
-
-      <h2 class="text-xl font-bold text-teal-400 mb-2">Your Control</h2>
-      <p class="text-gray-300">If you have questions or concerns about how your information is handled, please contact us using the <a href="/contact.html" class="text-teal-400 underline hover:text-teal-300">Contact Form</a>.</p>
+      <h2 class="text-xl font-bold text-oliveGreen mb-2">Information You Choose to Share</h2>
+      <p class="text-armadilloGray mb-4">If you use the contact form, your message is securely sent via Formspree.</p>
+      <p class="text-armadilloGray mb-4">This may include your name, email, and the content of your message.</p>
+      <p class="text-armadilloGray mb-4">This information is used only to respond to your inquiry and is not stored on Iron Dillo servers.</p>
+      <h2 class="text-xl font-bold text-oliveGreen mb-2">How We Handle Your Information</h2>
+      <p class="text-armadilloGray mb-4">We do not sell, share, or disclose your personal information to third parties.</p>
+      <p class="text-armadilloGray mb-4">We implement basic security measures to ensure messages submitted through the contact form remain private.</p>
+      <h2 class="text-xl font-bold text-oliveGreen mb-2">External Services</h2>
+      <p class="text-armadilloGray mb-4">Google Search Console may collect anonymized, aggregated traffic data for site performance monitoring.</p>
+      <p class="text-armadilloGray mb-4">This data cannot be used to identify individual visitors.</p>
+      <h2 class="text-xl font-bold text-oliveGreen mb-2">Your Control</h2>
+      <p class="text-armadilloGray">If you have questions or concerns about how your information is handled, please contact us using the <a href="/contact.html" class="text-oliveGreen underline hover:text-oliveDark">Contact Form</a>.</p>
     </section>
   </main>
-
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" aria-current="page" class="hover:underline text-teal-400">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+    <a href="/privacy.html" aria-current="page" class="hover:underline text-oliveGreen">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
   </footer>
-
 </body>
 </html>
